--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,18 +1,20 @@
 <h1>{{ title }}</h1>
 
 <ng-container *ngIf="!isLoading">
-    <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">UserName</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let user of users; index as i">
-            <th scope="row">{{ i }}</th>
-            <td>{{ user.userName }}</td>
-          </tr>
-        </tbody>
-      </table>
+    <div class="container">
+        <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">UserName</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let user of users; index as i">
+                <th scope="row">{{ i }}</th>
+                <td>{{ user.userName }}</td>
+              </tr>
+            </tbody>
+          </table>
+      </div>
 </ng-container>
