--- a/client/src/app/shared/components/nav/nav.component.html
+++ b/client/src/app/shared/components/nav/nav.component.html
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
         <li class="nav-item">
-          <a class="nav-link active" >Home</a>
+          <a class="nav-link active">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Lists</a>
@@ -24,12 +24,21 @@
           <a class="nav-link" href="#">Matches</a>
         </li>
       </ul>
-      <form class="d-flex">
+      <form
+        #loginForm="ngForm"
+        (ngSubmit)="login()"
+        autocomplete="off"
+        class="d-flex"
+      >
         <input
+          name="username"
+          [(ngModel)]="loginModel.username"
           class="form-control me-2"
           placeholder="username"
         />
         <input
+          name="password"
+          [(ngModel)]="loginModel.password"
           class="form-control me-2"
           placeholder="password"
           type="password"
