--- a/client/src/app/shared/components/nav/nav.component.html
+++ b/client/src/app/shared/components/nav/nav.component.html
@@ -13,7 +13,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
-      @if(isLoggedIn){
+      @if(accountService.currentUser()){
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
         <li class="nav-item">
           <a class="nav-link active">Matches</a>
@@ -53,7 +53,7 @@
         </ul>
       </div>
 
-      } @if(!isLoggedIn){
+      } @if(!accountService.currentUser()){
       <form
         #loginForm="ngForm"
         (ngSubmit)="login()"
