--- a/client/src/app/features/register/register.component.html
+++ b/client/src/app/features/register/register.component.html
@@ -26,6 +26,6 @@
 
     <div class="row justify-content-evenly ">
         <button type="submit" class="btn btn-info btn-lg col-5">Submit</button>
-        <button (click)="cancel()" class="btn btn-primary btn-lg col-5">Cancel</button>
+        <button (click)="cancel()" type="button" class="btn btn-primary btn-lg col-5">Cancel</button>
     </div>
 </form>
