--- a/client/src/app/shared/components/home/home.component.html
+++ b/client/src/app/shared/components/home/home.component.html
@@ -1,22 +1,28 @@
 <div class="container mt-5">
   <div style="text-align: center">
-    @if (!registerMode) {
-    <h1>Find your match</h1>
-    <p class="lead">
-      Come on in to view your matches... all you need to do is to signup!
-    </p>
-    <div class="text-center">
-      <button class="btn btn-primary btn-lg me-2" (click)="registerToggle()">Register</button>
-      <button class="btn btn-info btn-lg me-2">Learn more</button>
-    </div>
-    }@else {
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-4">
-          <p>Register form..</p>
+    <ng-container *ngIf="!isLoading">
+      @if (!registerMode) {
+      <h1>Find your match</h1>
+      <p class="lead">
+        Come on in to view your matches... all you need to do is to signup!
+      </p>
+      <div class="text-center">
+        <button class="btn btn-primary btn-lg me-2" (click)="registerToggle()">
+          Register
+        </button>
+        <button class="btn btn-info btn-lg me-2">Learn more</button>
+      </div>
+      }@else {
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-5">
+            <app-register
+              (cancelRegister)="onCancelRegister($event)"
+            ></app-register>
+          </div>
         </div>
       </div>
-    </div>
-    }
+      }
+    </ng-container>
   </div>
 </div>
