--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-nav></app-nav>
 <br class="mt-5" />
 <main class="container mt-5">
-  <app-home></app-home>
+  <router-outlet></router-outlet>
 </main>
