--- a/client/src/app/shared/components/nav/nav.component.html
+++ b/client/src/app/shared/components/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="#">DatingApp</a>
+    <a class="navbar-brand" href="/">DatingApp</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -16,13 +16,13 @@
       @if(accountService.currentUser()){
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
         <li class="nav-item">
-          <a class="nav-link active">Matches</a>
+          <a class="nav-link" href="/members">Matches</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Lists</a>
+          <a class="nav-link" href="/lists">Lists</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Messages</a>
+          <a class="nav-link" href="/messages">Messages</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#" (click)="logout()">Logout</a>
