--- a/client/src/app/shared/components/nav/nav.component.html
+++ b/client/src/app/shared/components/nav/nav.component.html
@@ -70,7 +70,7 @@
           placeholder="password"
           type="password"
         />
-        <button class="btn btn-outline-success" type="submit">Login</button>
+        <button class="btn btn-outline-primary" type="submit">Login</button>
       </form>
       }
     </div>
