--- a/client/src/app/shared/components/nav/nav.component.html
+++ b/client/src/app/shared/components/nav/nav.component.html
@@ -32,6 +32,11 @@
             >Messages</a
           >
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/errors" routerLinkActive="active"
+            >Errors</a
+          >
+        </li>
       </ul>
 
       <div class="dropdown" dropdown #dropdown="bs-dropdown" [autoClose]="true">
