--- a/client/src/app/shared/components/lists/lists.component.html
+++ b/client/src/app/shared/components/lists/lists.component.html
@@ -1,1 +1,38 @@
-<p>lists works!</p>
+<ng-container *ngIf="!isLoading; else showLoading">
+  <div id="carouselExampleCaptions" class="carousel slide">
+    <div class="carousel-inner">
+      <div
+        *ngFor="let user of users; let i = index"
+        [ngClass]="{ active: i === 0 }"
+        class="carousel-item"
+      >
+        <img [src]="user.photoUrl" class="d-block w-100" alt="user image" />
+        <div class="carousel-caption d-none d-md-block">
+          <h5>{{ user.userName }}</h5>
+          <p>{{ user.introduction }}</p>
+        </div>
+      </div>
+    </div>
+    <button
+      class="carousel-control-prev"
+      type="button"
+      data-bs-target="#carouselExampleCaptions"
+      data-bs-slide="prev"
+    >
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button
+      class="carousel-control-next"
+      type="button"
+      data-bs-target="#carouselExampleCaptions"
+      data-bs-slide="next"
+    >
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+</ng-container>
+<ng-template #showLoading>
+  <mat-spinner></mat-spinner>
+</ng-template>
