--- a/client/src/app/shared/components/lists/list-card/list-card.component.html
+++ b/client/src/app/shared/components/lists/list-card/list-card.component.html
@@ -2,7 +2,7 @@
   <div class="card-img-wrapper">
     <img [src]="user().photoUrl" class="card-img-top" alt="user-image" />
     <ul class="list-inline user-icons animate text-center">
-      <li class="list-inline-item">
+      <li class="list-inline-item" [routerLink]="'/members/' + user().userName">
         <button class="btn btn-primary"><i class="fa fa-user"></i></button>
       </li>
       <li class="list-inline-item">
