--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,4 @@
-<app-nav></app-nav>
-<br class="mt-5" />
-<main class="container mt-5">
+<app-nav class="mb-2"></app-nav>
+<main class="container main-container h-100">
   <router-outlet></router-outlet>
 </main>
