--- a/client/src/app/shared/components/lists/lists.component.html
+++ b/client/src/app/shared/components/lists/lists.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="!isLoading; else showLoading">
   <div class="row">
     @for(user of users; track user.id){
-    <div class="col-6 col-md-3 col-lg-2">
+    <div class="col-6 col-md-5 col-lg-4 col-xl-3">
       <app-list-card [user]="user"></app-list-card>
     </div>
     }
