--- a/client/src/app/shared/components/nav/nav.component.html
+++ b/client/src/app/shared/components/nav/nav.component.html
@@ -18,13 +18,13 @@
       @if(authService.currentUser()){
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/members" routerLinkActive="active"
-            >Matches</a
+          <a class="nav-link" routerLink="/lists" routerLinkActive="active"
+            >Explore</a
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/lists" routerLinkActive="active"
-            >Lists</a
+          <a class="nav-link" routerLink="/members" routerLinkActive="active"
+            >Matches</a
           >
         </li>
         <li class="nav-item">
@@ -32,11 +32,11 @@
             >Messages</a
           >
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" routerLink="/errors" routerLinkActive="active"
             >Errors</a
           >
-        </li>
+        </li> -->
       </ul>
 
       <div class="dropdown" dropdown #dropdown="bs-dropdown" [autoClose]="true">
@@ -51,7 +51,7 @@
           aria-labelledby="button-triggers-manual"
         >
           <li role="menuitem">
-            <a class="dropdown-item" href="#">Edit Profile</a>
+            <a class="dropdown-item" href="/members/edit">Edit Profile</a>
           </li>
           <div class="dropdown-divider"></div>
           <li role="menuitem">
