--- a/client/src/app/shared/components/form-fields/form-date-field/form-date-field.component.html
+++ b/client/src/app/shared/components/form-fields/form-date-field/form-date-field.component.html
@@ -7,9 +7,11 @@
   <mat-form-field class="w-100">
     <input
       matInput
+      [placeholder]="placeholderInput"
       [min]="minDate"
       [max]="maxDate"
       [matDatepicker]="picker"
+      [formControl]="formControlInput()"
       readonly
       (click)="picker.open(); $event.preventDefault()"
     />
