Update to load cities after country select

--- a/client/src/app/features/members/member-edit/member-edit.component.css
+++ b/client/src/app/features/members/member-edit/member-edit.component.css
@@ -6,3 +6,12 @@
     height: auto !important;
     min-height: 100%;
 }
+
+.cities-loader{
+    display: flex;
+    flex-direction: row;
+    align-items: end;
+    justify-content: start;
+    height: 100%;
+    width: 100%;
+}
