--- a/client/src/app/shared/components/form-fields/form-text-input-field/form-input-field.component.html
+++ b/client/src/app/shared/components/form-fields/form-text-input-field/form-input-field.component.html
@@ -1,13 +1,24 @@
 <ng-container *ngIf="label != null">
   <label for="usernameInput" class="form-label">
-    {{ label() }} <ng-container *ngIf="isRequired">*</ng-container>
+    {{ label }} <ng-container *ngIf="isRequired()">*</ng-container>
   </label>
 </ng-container>
 
-<input
-  [formControl]="formControlInput()"
-  [type]="type()"
-  [placeholder]="placeholder()"
-  class="form-control"
-  id="usernameInput"
-/>
+<ng-container *ngIf="type === 'textarea'; else showDefault">
+  <textarea
+    class="form-control"
+    [placeholder]="placeholder"
+    id="floatingTextarea"
+    [required]="isRequired()"
+  ></textarea>
+</ng-container>
+<ng-template #showDefault>
+  <input
+    [formControl]="formControlInput()"
+    [type]="type"
+    [placeholder]="placeholder"
+    class="form-control"
+    id="usernameInput"
+    [required]="isRequired()"
+  />
+</ng-template>
