--- a/client/src/app/features/members/member-edit/member-edit.component.css
+++ b/client/src/app/features/members/member-edit/member-edit.component.css
@@ -2,6 +2,7 @@
     width: 80%;
     padding-inline: 5%;
     padding-top: 34px;
+    padding-bottom: 34px;
     background-color: rgb(32, 31, 32);
     height: auto !important;
     min-height: 100%;
