fix textarea control binding

--- a/client/src/app/shared/components/form-fields/form-text-input-field/form-input-field.component.html
+++ b/client/src/app/shared/components/form-fields/form-text-input-field/form-input-field.component.html
@@ -6,6 +6,7 @@
 
 <ng-container *ngIf="type === 'textarea'; else showDefault">
   <textarea
+    [formControl]="formControlInput()"
     class="form-control"
     [placeholder]="placeholder"
     id="floatingTextarea"
