--- a/client/src/app/features/members/member-edit/member-edit.component.html
+++ b/client/src/app/features/members/member-edit/member-edit.component.html
@@ -28,7 +28,7 @@
             [formControlInput]="genderFormControl"
             [options]="GenderOptions"
             [isRequired]="true"
-            label="City"
+            label="Gender"
             placeholder="Select gender...."
           ></app-form-select-field>
         </div>
