--- a/client/src/app/features/members/member-edit/member-edit.component.html
+++ b/client/src/app/features/members/member-edit/member-edit.component.html
@@ -118,15 +118,11 @@
       </div>
 
       <div class="row">
-        <div class="mb-3 col-12">
-          <label for="usernameInput" class="form-label">Upload Photos</label>
-          <input
-            [formControl]="lookingForFormControl"
-            type="text"
-            class="form-control"
-            id="usernameInput"
-          />
-        </div>
+        <app-image-gallery
+          label="Upload Photos"
+          [isRequired]="true"
+          [images]="userPhotos"
+        ></app-image-gallery>
       </div>
       <hr />
       <div class="row justify-content-between">
@@ -142,7 +138,7 @@
           type="submit"
           class="btn btn-primary col-sm-3 col-md-2"
         >
-          Submit
+          Save
         </button>
       </div>
     </form>
