--- a/client/src/app/shared/components/form-fields/form-text-input-field/form-input-field.component.html
+++ b/client/src/app/shared/components/form-fields/form-text-input-field/form-input-field.component.html
@@ -11,6 +11,7 @@
     [placeholder]="placeholder"
     id="floatingTextarea"
     [required]="isRequired()"
+    [rows]="rows"
   ></textarea>
 </ng-container>
 <ng-template #showDefault>
