Fix nav redirects

--- a/client/src/app/shared/components/nav/nav.component.html
+++ b/client/src/app/shared/components/nav/nav.component.html
@@ -51,11 +51,13 @@
           aria-labelledby="button-triggers-manual"
         >
           <li role="menuitem">
-            <a class="dropdown-item" href="/members/edit">Edit Profile</a>
+            <a class="dropdown-item" routerLink="/members/edit">Edit Profile</a>
           </li>
           <div class="dropdown-divider"></div>
           <li role="menuitem">
-            <a class="dropdown-item" href="#" (click)="logout()">Logout</a>
+            <a class="dropdown-item" routerLink="#" (click)="logout()"
+              >Logout</a
+            >
           </li>
         </ul>
       </div>
