Add loading effect

--- a/client/src/app/features/members/member-edit/member-edit.component.html
+++ b/client/src/app/features/members/member-edit/member-edit.component.html
@@ -144,5 +144,8 @@
   </div>
 </ng-container>
 <ng-template #showLoading>
-  <mat-spinner></mat-spinner>
+  <div class="loading-spinner-container">
+    <mat-spinner></mat-spinner>
+    <h3 class="display-6">Processing...</h3>
+  </div>
 </ng-template>
