--- a/client/src/app/shared/components/nav/nav.component.html
+++ b/client/src/app/shared/components/nav/nav.component.html
@@ -18,25 +18,15 @@
       @if(authService.currentUser()){
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/lists" routerLinkActive="active"
+          <a class="nav-link" routerLink="/members" routerLinkActive="active"
             >Explore</a
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/members" routerLinkActive="active"
+          <a class="nav-link" routerLink="/messages" routerLinkActive="active"
             >Matches</a
           >
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/messages" routerLinkActive="active"
-            >Messages</a
-          >
-        </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link" routerLink="/errors" routerLinkActive="active"
-            >Errors</a
-          >
-        </li> -->
       </ul>
 
       <div class="dropdown" dropdown #dropdown="bs-dropdown" [autoClose]="true">
@@ -51,7 +41,7 @@
           aria-labelledby="button-triggers-manual"
         >
           <li role="menuitem">
-            <a class="dropdown-item" routerLink="/members/edit">Edit Profile</a>
+            <a class="dropdown-item" routerLink="edit-profile">Edit Profile</a>
           </li>
           <div class="dropdown-divider"></div>
           <li role="menuitem">
