--- a/client/src/app/features/members/member-edit/member-edit.component.html
+++ b/client/src/app/features/members/member-edit/member-edit.component.html
@@ -116,13 +116,13 @@
       <hr />
       <div class="row gap-1">
         <app-image-gallery
-          label="Upload Display Image"
+          label="Upload Main Image"
           [isRequired]="true"
           [images]="mainPhoto"
           [maxCount]="1"
           [multiple]="false"
           [allowWarning]="false"
-          (deleteImageEvent$)="handleImageDeleteEvent($event)"
+          (deleteImageEvent$)="handleMainImageDeleteEvent($event)"
           (selectedImagesToUploadChange)="handleMainImageChangeEvent($event)"
         ></app-image-gallery>
         <br />
@@ -148,7 +148,7 @@
           Cancel
         </button>
         <button
-          [disabled]="userUpdateFormGroup.invalid"
+          [disabled]="userUpdateFormGroup.invalid || !hasUploadedMainImage"
           type="submit"
           class="btn btn-primary col-sm-3 col-md-2"
         >
