--- a/client/src/app/features/members/member-list/member-list.component.html
+++ b/client/src/app/features/members/member-list/member-list.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="!isLoading">
   <div class="row">
     @for(user of users; track user.id){
-    <div class="col-6 col-md-5 col-lg-4 col-xl-3">
+    <div class="mt-4 col-6 col-md-5 col-lg-4 col-xl-3">
       <app-member-card [user]="user"></app-member-card>
     </div>
     }
