--- a/client/src/app/features/members/member-detail/member-detail.component.css
+++ b/client/src/app/features/members/member-detail/member-detail.component.css
@@ -1,29 +1,31 @@
-.container{
-    width: 70%;
-    padding-inline: 5%;
-    background-color: rgb(32, 31, 32);
-    height: auto !important;
-    min-height: 100%;
+.container {
+  width: 70%;
+  padding-inline: 5%;
+  background-color: rgb(32, 31, 32);
+  height: auto !important;
+  min-height: 100%;
 }
 
-@media screen and (max-width: 900px){
-    .container{
-        width: 90%;
-    }
+@media screen and (max-width: 900px) {
+  .container {
+    width: 90%;
+  }
 }
-@media screen and (max-width: 800px){
-    .container{
-        width: 100%;
-    }
+@media screen and (max-width: 800px) {
+  .container {
+    width: 100%;
+  }
 }
-
 
 .carousel-item {
-    width: 100%;
-    height: 620px;
+  width: 100%;
+  height: 620px;
 }
 
-.carousel-item img{
-    height: 100%;
-    object-fit:contain;
+.carousel-item img {
+  height: 80vh;
+  object-fit: contain;
+}
+.carousel-inner {
+  height: 80vh;
 }
