--- a/client/src/app/features/members/member-edit/member-edit.component.html
+++ b/client/src/app/features/members/member-edit/member-edit.component.html
@@ -141,7 +141,7 @@
       <hr />
       <div class="row justify-content-between">
         <button
-          type="submit"
+          type="button"
           class="btn btn-secondary col-sm-3 col-md-2 mb-2 mb-sm-0"
           routerLink="/members"
         >
