--- a/client/src/app/shared/components/form-fields/form-date-field/form-date-field.component.css
+++ b/client/src/app/shared/components/form-fields/form-date-field/form-date-field.component.css
@@ -1,26 +1,33 @@
-::ng-deep .mat-mdc-form-field-infix{
-    padding: 1px 0 !important;
-    min-height: 36px !important;
-    height: 36px !important;
+::ng-deep .mat-mdc-form-field-infix {
+  padding: 1px 0 !important;
+  min-height: 36px !important;
+  height: 36px !important;
 }
 
-::ng-deep .mat-mdc-text-field-wrapper{
-    border-radius: 0.375rem !important;
-    background-color: #fff !important;
-    min-height: 36px !important;
-    height: 36px !important;
+::ng-deep .mat-mdc-text-field-wrapper {
+  border-radius: 0.375rem !important;
+  background-color: #fff !important;
+  min-height: 36px !important;
+  height: 36px !important;
 }
 
-::ng-deep .mdc-text-field--no-label:not(.mdc-text-field--textarea) .mat-mdc-form-field-input-control.mdc-text-field__input, .mat-mdc-text-field-wrapper .mat-mdc-form-field-input-control {
-    height: 100% !important;
+::ng-deep
+  .mdc-text-field--no-label:not(.mdc-text-field--textarea)
+  .mat-mdc-form-field-input-control.mdc-text-field__input,
+.mat-mdc-text-field-wrapper .mat-mdc-form-field-input-control {
+  height: 100% !important;
 }
 
 ::ng-deep .mat-mdc-icon-button .mat-mdc-button-touch-target {
-    height: 36px !important;
+  height: 36px !important;
 }
 
-@media screen and (max-height:700px) {
-    ::ng-deep .cdk-overlay-pane .mat-datepicker-content {
-        margin-top: 25px;
-    }
+@media screen and (max-height: 700px) {
+  ::ng-deep .cdk-overlay-pane .mat-datepicker-content {
+    margin-top: 25px;
+  }
+}
+
+.error {
+  border-radius: 0.375rem;
 }
