--- a/client/src/app/shared/components/form-fields/form-select-field/form-select-field.component.html
+++ b/client/src/app/shared/components/form-fields/form-select-field/form-select-field.component.html
@@ -10,6 +10,7 @@
     class="form-select"
     id="inputGroupSelect01"
     (change)="onInputChange()"
+    [ngClass]="{ error: showError }"
   >
     <option ngValue="" disabled selected>{{ placeholder }}</option>
     <option
@@ -20,3 +21,8 @@
     </option>
   </select>
 </fieldset>
+<ng-container *ngIf="showError">
+  <div>
+    <span class="error-message">{{ getMessage() }}</span>
+  </div>
+</ng-container>
