--- a/client/src/app/shared/components/form-fields/image-gallery/image-gallery.component.html
+++ b/client/src/app/shared/components/form-fields/image-gallery/image-gallery.component.html
@@ -13,7 +13,13 @@
     (change)="onFileSelected($event)"
     accept="image/*"
     [multiple]="multiple"
+    [ngClass]="{ error: showError }"
   />
+  <ng-container *ngIf="showError">
+    <div>
+      <span class="error-message">{{ getMessage() }}</span>
+    </div>
+  </ng-container>
   } @if(allowWarning){
   <p *ngIf="hasReachedMax" class="warning">
     You can upload up to {{ maxCount }} image{{ maxCount > 1 ? "s" : "" }} only.
