--- a/client/src/app/features/members/member-edit/member-edit.component.html
+++ b/client/src/app/features/members/member-edit/member-edit.component.html
@@ -127,7 +127,7 @@
         ></app-image-gallery>
         <br />
         <app-image-gallery
-          label="Additional Photos"
+          label="Additional Images"
           [isRequired]="false"
           [images]="additionalImages"
           [maxCount]="4"
