--- a/client/src/app/features/members/member-edit/member-edit.component.html
+++ b/client/src/app/features/members/member-edit/member-edit.component.html
@@ -6,6 +6,7 @@
       [formGroup]="userUpdateFormGroup"
       (input)="onInputChange()"
       (ngSubmit)="submitUserUpdate()"
+      autocomplete="off"
     >
       <div class="row">
         <div class="mb-3 col-md-6">
