--- a/client/src/app/features/register/register.component.html
+++ b/client/src/app/features/register/register.component.html
@@ -1,31 +1,47 @@
-<form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
-    <h2 class="text-center text-primary">Sign Up</h2>
-    <hr>
-    <div class="mb-3 form-floating">
-        <input 
-            type="text"
-            class="form-control"
-            name="username"
-            [(ngModel)]="registerModel.username"
-            placeholder="Enter username"
-            id="username"
-        >
-        <label for="username">Username</label>
-    </div>
-    <div class="mb-3 form-floating">
-        <input 
-            type="password"
-            class="form-control"
-            name="password"
-            [(ngModel)]="registerModel.password"
-            placeholder="Enter password"
-            id="password"
-        >
-        <label for="password">Password</label>
-    </div>
+<form
+  [formGroup]="registerFormGroup"
+  (ngSubmit)="register()"
+  autocomplete="off"
+  class="text-start"
+>
+  <h2 class="text-center text-primary">Sign Up</h2>
+  <hr />
+  <div class="mb-3 form-floating">
+    <app-form-input-field
+      [formControlInput]="usernameFormControl"
+      label="Username"
+      [isRequired]="true"
+      type="text"
+      placeholder="Enter your username"
+    ></app-form-input-field>
+  </div>
+  <div class="mb-3">
+    <app-form-input-field
+      [formControlInput]="passwordFormControl"
+      label="Password"
+      type="password"
+      [isRequired]="true"
+      placeholder="Enter your password"
+    ></app-form-input-field>
+  </div>
+  <div class="mb-3">
+    <app-form-input-field
+      [formControlInput]="confirmPasswordFormControl"
+      label="Confirm Password"
+      type="password"
+      [isRequired]="true"
+      placeholder="Confirm your password"
+    ></app-form-input-field>
+  </div>
 
-    <div class="row justify-content-evenly ">
-        <button type="submit" class="btn btn-info btn-lg col-5">Submit</button>
-        <button (click)="cancel()" type="button" class="btn btn-primary btn-lg col-5">Cancel</button>
-    </div>
+  <div class="row justify-content-evenly">
+    <button type="submit" class="btn btn-info btn-lg col-5">Submit</button>
+    <button
+      (click)="cancel()"
+      type="button"
+      class="btn btn-primary btn-lg col-5"
+    >
+      Cancel
+    </button>
+  </div>
 </form>
