--- a/client/src/app/features/register/register.component.html
+++ b/client/src/app/features/register/register.component.html
@@ -2,7 +2,7 @@
   [formGroup]="registerFormGroup"
   (ngSubmit)="register()"
   autocomplete="off"
-  class="text-start"
+  class="text-start signup-form"
 >
   <h2 class="text-center text-primary">Sign Up</h2>
   <hr />
