--- a/client/src/app/shared/components/home/home.component.html
+++ b/client/src/app/shared/components/home/home.component.html
@@ -9,7 +9,9 @@
       <button class="btn btn-primary btn-lg me-2" (click)="registerToggle()">
         Register
       </button>
-      <button class="btn btn-info btn-lg me-2">Learn more</button>
+      <button routerLink="/privacy-policy" class="btn btn-info btn-lg me-2">
+        Learn more
+      </button>
     </div>
     }@else {
     <div class="container">
