--- a/client/src/app/shared/components/nav/nav.component.html
+++ b/client/src/app/shared/components/nav/nav.component.html
@@ -27,6 +27,9 @@
             >Matches</a
           >
         </li>
+        <li class="nav-item">
+          <a routerLink="/privacy-policy" class="nav-link">Privacy Policy</a>
+        </li>
       </ul>
 
       <div class="dropdown" dropdown #dropdown="bs-dropdown" [autoClose]="true">
